--- a/sprachspielereien/einheiten/begründen-lieblingsstadt.html
+++ b/sprachspielereien/einheiten/begründen-lieblingsstadt.html
@@ -140,7 +140,7 @@ Transkript
 Transkript
 </summary>
 <blockquote>
-<p>Lars, 18: Ich bin in Berlin geboren. Ich mag Berlin, weil diese Stadt nicht so spießig ist wie die anderen Städte. Ich kann jedes Wochenende etwas anderes machen, weil das kulturelle Angebot sehr breit ist. Manchmal ärgere ich mich aber, weil die U-Bahn nachts nicht fährt und oft stinkt. Wenn ich genug von Berlin habe, dann fahre ich gern nach Potsdam. Potsdam ist nicht weit weg von Berlin. Ich bin gern dort, weil es in Potsdam ein bisschen ruhiger und vor allem grüner als in Berlin ist.</p>
+<p>Ich bin in Berlin geboren. Ich mag Berlin, weil diese Stadt nicht so spießig ist wie die anderen Städte. Ich kann jedes Wochenende etwas anderes machen, weil das kulturelle Angebot sehr breit ist. Manchmal ärgere ich mich aber, weil die U-Bahn nachts nicht fährt und oft stinkt. Wenn ich genug von Berlin habe, dann fahre ich gern nach Potsdam. Potsdam ist nicht weit weg von Berlin. Ich bin gern dort, weil es in Potsdam ein bisschen ruhiger und vor allem grüner als in Berlin ist.</p>
 </blockquote>
 </details>
 <details>
@@ -148,7 +148,7 @@ Transkript
 Transkript
 </summary>
 <blockquote>
-<p>Christine, 17: Ich komme aus Karlsruhe, lebe aber in Wien, weil meine Eltern hier arbeiten. Ich mag diese Stadt, weil sie eine Weltstadt ist. Ich habe hier nie das Gefühl, Ausländerin zu sein, weil hier immer viele Leute aus verschiedenen Ländern auf der Straße sind. Ich lebe auch gern hier, weil immer etwas los ist: eine Theaterpremiere oder ein Musikfestival. Viele Leute beschweren sich, weil die Stadt in den letzten Jahren immer schmutziger geworden ist. Überall liegt Müll, sagen sie. Das stimmt schon, aber ich finde das nicht so schlimm.</p>
+<p>Ich komme aus Karlsruhe, lebe aber in Wien, weil meine Eltern hier arbeiten. Ich mag diese Stadt, weil sie eine Weltstadt ist. Ich habe hier nie das Gefühl, Ausländerin zu sein, weil hier immer viele Leute aus verschiedenen Ländern auf der Straße sind. Ich lebe auch gern hier, weil immer etwas los ist: eine Theaterpremiere oder ein Musikfestival. Viele Leute beschweren sich, weil die Stadt in den letzten Jahren immer schmutziger geworden ist. Überall liegt Müll, sagen sie. Das stimmt schon, aber ich finde das nicht so schlimm.</p>
 </blockquote>
 </details>
 <details>
@@ -156,7 +156,7 @@ Transkript
 Transkript
 </summary>
 <blockquote>
-<p>Rowena, 19: Ich lebe in Bayreuth, möchte aber gern nach München ziehen. München ist genau die richtige Stadt für mich, weil es dort die tollsten Geschäfte und die verrücktesten Märkte gibt. Ich finde München auch anziehend, weil dort viele Trends in Sachen Mode und Musik entstehen. Diese Stadt ist meistens einen Schritt voraus, weil die Leute dort offen und experimentierfreudig sind. Eine Freundin von mir ist schon in München! Aber sie sagt, das Leben ist doch nicht so leicht, weil die Wohnungsmieten so hoch sind und weil die Konkurrenz auf der Arbeitsmarkt größer als in Bayreuth ist. Vielleicht bleibe ich also doch lieber hier.</p>
+<p>Ich lebe in Bayreuth, möchte aber gern nach München ziehen. München ist genau die richtige Stadt für mich, weil es dort die tollsten Geschäfte und die verrücktesten Märkte gibt. Ich finde München auch anziehend, weil dort viele Trends in Sachen Mode und Musik entstehen. Diese Stadt ist meistens einen Schritt voraus, weil die Leute dort offen und experimentierfreudig sind. Eine Freundin von mir ist schon in München! Aber sie sagt, das Leben ist doch nicht so leicht, weil die Wohnungsmieten so hoch sind und weil die Konkurrenz auf der Arbeitsmarkt größer als in Bayreuth ist. Vielleicht bleibe ich also doch lieber hier.</p>
 </blockquote>
 </details>
 <details>
@@ -164,14 +164,14 @@ Transkript
 Transkript
 </summary>
 <blockquote>
-<p>Andrea, 22: Ich war schon dreimal in Zürich. Diese Stadt finde ich Spitze, weil sie ein Zentrum für Mode und Werbung ist. Ich möchte gern einmal in der Modebranche arbeiten. Außerdem ist Zürich perfekt für einen Outdoor-Freak wie mich, weil die Berge in der Nähe sind und weil der Züricher See mitten in der Stadt liegt. Die Stadt ist eine Weltstadt, aber immer überschaubar und irgendwie gemütlich. Im Moment lebe ich noch in Basel, weil ich hier Familie habe. Hier ist es auch schön, aber manchmal nervt mich die Verwandtschaft.</p>
+<p>Ich war schon dreimal in Zürich. Diese Stadt finde ich Spitze, weil sie ein Zentrum für Mode und Werbung ist. Ich möchte gern einmal in der Modebranche arbeiten. Außerdem ist Zürich perfekt für einen Outdoor-Freak wie mich, weil die Berge in der Nähe sind und weil der Züricher See mitten in der Stadt liegt. Die Stadt ist eine Weltstadt, aber immer überschaubar und irgendwie gemütlich. Im Moment lebe ich noch in Basel, weil ich hier Familie habe. Hier ist es auch schön, aber manchmal nervt mich die Verwandtschaft.</p>
 </blockquote>
 </details>
 <time>00:30 – 00:40</time>
 <task>
-3
+2
 </task>
-<p>Lesen Sie zwei oder drei Transkripte aus 2 und markieren Sie <em>weil</em> und das folgende Verb. Vergleichen Sie die markierten Teile. Welches grammatische Muster fällt Ihnen auf? Ergänzen Sie die folgende Aussagen.</p>
+<p>Lesen Sie zwei oder drei Transkripte und markieren Sie <em>weil</em> und das folgende Verb. Vergleichen Sie die markierten Teile. Welches grammatische Muster fällt Ihnen auf? Ergänzen Sie die folgende Aussagen.</p>
 <ul>
 <li>Der Teilsatz mit <em>weil</em> drückt einen __________ aus.<br />
 </li>
