--- a/sprachspielereien/einheiten/erzählen-ferien.html
+++ b/sprachspielereien/einheiten/erzählen-ferien.html
@@ -162,7 +162,7 @@ Transkripte Audio 3
 <task>
 5
 </task>
-<p>Besuchen Sie mit Ihrem Partner <em>Story Dice</em> (<a href="https://davebirss.com/storydice/">https://davebirss.com/storydice/</a>) online. Die Webseite würfelt für Sie und Sie erhalten neun zufällige Bilder. <strong>Machen Sie einen Screenshot für später</strong>. Wählen Sie <strong>acht Bilder</strong> aus. Erfinden Sie passend zu den Bildern eine Ferien-Geschichte.</p>
+<p>Besuchen Sie <em>Story Dice</em> (<a href="https://davebirss.com/storydice/">https://davebirss.com/storydice/</a>) online. Die Webseite würfelt für Sie und Sie erhalten neun zufällige Bilder. <strong>Machen Sie einen Screenshot für später</strong>. Wählen Sie <strong>acht Bilder</strong> aus. Erfinden Sie passend zu den Bildern eine Ferien-Geschichte.</p>
 <p><img src="images/qr_storydice.png" width="100px" /></p>
 <time>00:80 – 00:90</time>
 <task>
