--- a/sprachspielereien/einheiten/erzählen-schulzeit.html
+++ b/sprachspielereien/einheiten/erzählen-schulzeit.html
@@ -138,22 +138,31 @@ Julia
 </tr>
 <tr>
 <td style="vertical-align: top;">
+<details>
+<summary>
+Fragen
+</summary>
 <ul>
 <li>Franziska hatte keine Freunde in der Schule. Richtig oder falsch?</li>
 <li>Franziska hat keine Erinnerungen an ihre Lehrer. Richtig oder falsch?</li>
-<li>Was hat Franziska außerhalb der Unterrichtszeit an ihrer Schule gemacht? |</li>
+<li>Was hat Franziska außerhalb der Unterrichtszeit an ihrer Schule gemacht?</li>
 </ul>
+</details>
 </td>
 <td style="vertical-align: top;">
+<details>
+<summary>
+Fragen
+</summary>
 <ul>
 <li>Wann hat Julia Abitur gemacht?</li>
 <li>Welche Fremdsprachen hat Julia in der Schule gelernt?</li>
-<li>Wieso ist Julia nach Barcelona gefahren?</li>
-<li>Wieso hat ihr der Ausflug nach Barcelona gut gefallen?</li>
-<li>Wieso mochte sie den Deutschunterricht nicht so gern?</li>
-<li>Was haben Julia und ihre Klassenkameradinnen in der Physik-Klasse von Herrn Nierschel gemacht?</li>
-<li>wieso mochte Julia ihren Biologie-Lehrer Herrn Waldmann besonders?</li>
+<li>Wieso fand Julia den Ausflug mit Lehrer Strasser nach Barcelona so gut?</li>
+<li>Was hat Herr Heckmann auf Schulausflüge mitgebracht?</li>
+<li>Was haben Julia und ihre Klassenkameradinnen in der Physik-Klasse von Herrn Nierschel ein Jahr vor dem Abi gemacht?</li>
+<li>Was hat Julias Biologie-Lehrer Herr Waldmann in den Unterricht mitgebracht?</li>
 </ul>
+</details>
 </td>
 </tr>
 <tr>
@@ -170,7 +179,7 @@ Meine Schulzeit habe ich als sehr schön in Erinnerung, da es viele tolle Erinne
 <summary>
 Transkript
 </summary>
-Sehr gerne. Also ich war neun Jahre am Gießeler Gymnasium, bis 2002, da <strong>hab’</strong> ich Abitur gemacht. Und, in der fünften Klasse <strong>hab’</strong> ich mit äh Englisch angefangen, das war die erste Fremdsprache, und das war sehr aufregend, weil auf dem Gymnasium alles ganz anders gewesen ist, natürlich. Hm, in der siebten Klasse <strong>hab’</strong> ich dann Latein dazubekommen, und in der neunten Klasse Französisch. Ich <strong>hab’</strong> also drei Sprachen gelernt, weil ich ähm Sprachen immer sehr gern mochte. Und ich hab’ dann auch in der elften Klasse freiwillig äh Spanisch dazugenommen. Da <strong>hab’</strong> ich aber ganz wenig gelernt. Das <strong>war’n</strong> nur zwei Stunden in der Woche. Aber ich konnte dann in der zwölften Klasse mit meinem Spanisch-Lehrer, Herr Strasser, und der Spanisch-Gruppe nach Barcelona fahren, äh, als Klassenfahrt, und das war, das war wirklich super, weil ich mochte Herrn Strasser sehr, sehr gerne, und außerdem hat er sehr, sehr viel über Barcelona gewusst und uns ganz viel gezeigt. Hm, in der Schule mochte ich außerdem auch gerne Deutsch, weil ich insgesamt gern lese, aber leider <strong>war’n</strong> die Themen im Deutschunterricht nicht … nicht so interessant, über die man dann gesprochen hat. Überhaupt nicht gerne mochte ich Erdkunde, und ich mochte auch nicht … <strong>nich’-so</strong> gerne Physik, obwohl meine Physik-Lehrer eigentlich immer sehr nett waren. Ich hatte zum Beispiel Herrn Heckmann, der hat immer zu den Schulausflügen seinen Hund mitgenommen. Und äh kurz vor dem Abitur <strong>hat’</strong> ich dann Herrn Nierschel, und der hat immer jeden Spaß mitgemacht. Zum Beispiel hat er ein Jahr vor dem Abi, <strong>ham</strong> wir vorgeschlagen, dass alle in Abendgarderobe in die Schule kommen sollen. Ähm, und er hat das … er hat das auch gemacht. Also die Mädchen hatten schöne Kleider an und die Jungen einen Anzug, und er hatte den Anzug an, den er an seiner Hochzeit getragen hat. Das fanden wir wirklich, das fanden wir toll, dass er das gemacht hat. Und außerdem <strong>mocht’</strong> ich auch sehr gerne meinen Biologie-Lehrer, den Herrn Waldmann. Der hat im Unterricht immer mit uns Tee getrunken und Plätzchen gegessen, und das war sehr gemütlich, aber wir <strong>war’n</strong> alle trotzdem sehr motiviert. Und, ähm, <strong>ham</strong> dann auch ein gutes Abi bei ihm ge… äh geschrieben, letztendlich, weil wir wirklich, das hat uns sehr viel Spaß gemacht, mit ihm zu lernen. Er hat uns dann, um das Abi zu feiern, weil er hat sehr viel Wert auf Gesundheit gelegt, hat er alkoholfreien Sekt mitgebracht, im gesundheitsfreundlich zu feiern.
+Sehr gerne. Also ich war neun Jahre am Gießeler Gymnasium, bis 2002, da <strong>hab’</strong> ich Abitur gemacht. Und, in der fünften Klasse <strong>hab’</strong> ich mit äh Englisch angefangen, das war die erste Fremdsprache, und das war sehr aufregend, weil auf dem Gymnasium alles ganz anders gewesen ist, natürlich. Hm, in der siebten Klasse <strong>hab’</strong> ich dann Latein dazubekommen, und in der neunten Klasse Französisch. Ich <strong>hab’</strong> also drei Sprachen gelernt, weil ich ähm Sprachen immer sehr gern mochte. Und ich <strong>hab’</strong> dann auch in der elften Klasse freiwillig äh Spanisch dazugenommen. Da <strong>hab’</strong> ich aber ganz wenig gelernt. Das <strong>war’n</strong> nur zwei Stunden in der Woche. Aber ich konnte dann in der zwölften Klasse mit meinem Spanisch-Lehrer, Herr Strasser, und der Spanisch-Gruppe nach Barcelona fahren, äh, als Klassenfahrt, und das war, das war wirklich super, weil ich mochte Herrn Strasser sehr, sehr gerne, und außerdem hat er sehr, sehr viel über Barcelona gewusst und uns ganz viel gezeigt. Hm, in der Schule mochte ich außerdem auch gerne Deutsch, weil ich insgesamt gern lese, aber leider <strong>war’n</strong> die Themen im Deutschunterricht nicht … nicht so interessant, über die man dann gesprochen hat. Überhaupt nicht gerne mochte ich Erdkunde, und ich mochte auch nicht … <strong>nich’-so</strong> gerne Physik, obwohl meine Physik-Lehrer eigentlich immer sehr nett waren. Ich hatte zum Beispiel Herrn Heckmann, der hat immer zu den Schulausflügen seinen Hund mitgenommen. Und äh kurz vor dem Abitur <strong>hat’</strong> ich dann Herrn Nierschel, und der hat immer jeden Spaß mitgemacht. Zum Beispiel hat er ein Jahr vor dem Abi, <strong>ham</strong> wir vorgeschlagen, dass alle in Abendgarderobe in die Schule kommen sollen. Ähm, und er hat das … er hat das auch gemacht. Also die Mädchen hatten schöne Kleider an und die Jungen einen Anzug, und er hatte den Anzug an, den er an seiner Hochzeit getragen hat. Das fanden wir wirklich, das fanden wir toll, dass er das gemacht hat. Und außerdem <strong>mocht’</strong> ich auch sehr gerne meinen Biologie-Lehrer, den Herrn Waldmann. Der hat im Unterricht immer mit uns Tee getrunken und Plätzchen gegessen, und das war sehr gemütlich, aber wir <strong>war’n</strong> alle trotzdem sehr motiviert. Und, ähm, <strong>ham</strong> dann auch ein gutes Abi bei ihm ge… äh geschrieben, letztendlich, weil wir wirklich, das hat uns sehr viel Spaß gemacht, mit ihm zu lernen. Er hat uns dann, um das Abi zu feiern, weil er hat sehr viel Wert auf Gesundheit gelegt, hat er alkoholfreien Sekt mitgebracht, um gesundheitsfreundlich zu feiern.
 </details>
 </td>
 </tr>
