--- a/sprachspielereien/einheiten/begründen-lieblingsstadt.html
+++ b/sprachspielereien/einheiten/begründen-lieblingsstadt.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="beschreiben-sich-andere.html"/>
-
+<link rel="next" href="begründen-single.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -91,6 +91,8 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <li class="chapter" data-level="4" data-path="erzählen-leben.html"><a href="erzählen-leben.html"><i class="fa fa-check"></i><b>4</b> Von meinem Leben erzählen</a></li>
 <li class="chapter" data-level="5" data-path="beschreiben-sich-andere.html"><a href="beschreiben-sich-andere.html"><i class="fa fa-check"></i><b>5</b> Sich und andere beschreiben</a></li>
 <li class="chapter" data-level="6" data-path="begründen-lieblingsstadt.html"><a href="begründen-lieblingsstadt.html"><i class="fa fa-check"></i><b>6</b> Begründen: Meine Lieblingsstadt</a></li>
+<li class="chapter" data-level="7" data-path="begründen-single.html"><a href="begründen-single.html"><i class="fa fa-check"></i><b>7</b> Single oder in einer Beziehung: Wieso?</a></li>
+<li class="chapter" data-level="8" data-path="meinung-äußern-studentin.html"><a href="meinung-äußern-studentin.html"><i class="fa fa-check"></i><b>8</b> Die beste Studentin, ein idealer Lehrer?</a></li>
 <li class="divider"></li>
 <!-- <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li> -->
 
@@ -214,8 +216,8 @@ Ich bin so gern dort, weil …</p>
           </div>
         </div>
       </div>
-<a href="beschreiben-sich-andere.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="beschreiben-sich-andere.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="begründen-single.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
