--- a/sprachspielereien/einheiten/erzählen-ferien.html
+++ b/sprachspielereien/einheiten/erzählen-ferien.html
@@ -91,6 +91,8 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <li class="chapter" data-level="4" data-path="erzählen-leben.html"><a href="erzählen-leben.html"><i class="fa fa-check"></i><b>4</b> Von meinem Leben erzählen</a></li>
 <li class="chapter" data-level="5" data-path="beschreiben-sich-andere.html"><a href="beschreiben-sich-andere.html"><i class="fa fa-check"></i><b>5</b> Sich und andere beschreiben</a></li>
 <li class="chapter" data-level="6" data-path="begründen-lieblingsstadt.html"><a href="begründen-lieblingsstadt.html"><i class="fa fa-check"></i><b>6</b> Begründen: Meine Lieblingsstadt</a></li>
+<li class="chapter" data-level="7" data-path="begründen-single.html"><a href="begründen-single.html"><i class="fa fa-check"></i><b>7</b> Single oder in einer Beziehung: Wieso?</a></li>
+<li class="chapter" data-level="8" data-path="meinung-äußern-studentin.html"><a href="meinung-äußern-studentin.html"><i class="fa fa-check"></i><b>8</b> Die beste Studentin, ein idealer Lehrer?</a></li>
 <li class="divider"></li>
 <!-- <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li> -->
 
