--- a/sprachspielereien/einheiten/meinung-äußern-studentin.html
+++ b/sprachspielereien/einheiten/meinung-äußern-studentin.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="begründen-single.html"/>
-
+<link rel="next" href="meinung-äußern-klimawandel.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -93,6 +93,7 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <li class="chapter" data-level="6" data-path="begründen-lieblingsstadt.html"><a href="begründen-lieblingsstadt.html"><i class="fa fa-check"></i><b>6</b> Begründen: Meine Lieblingsstadt</a></li>
 <li class="chapter" data-level="7" data-path="begründen-single.html"><a href="begründen-single.html"><i class="fa fa-check"></i><b>7</b> Single oder in einer Beziehung: Wieso?</a></li>
 <li class="chapter" data-level="8" data-path="meinung-äußern-studentin.html"><a href="meinung-äußern-studentin.html"><i class="fa fa-check"></i><b>8</b> Die beste Studentin, ein idealer Lehrer?</a></li>
+<li class="chapter" data-level="9" data-path="meinung-äußern-klimawandel.html"><a href="meinung-äußern-klimawandel.html"><i class="fa fa-check"></i><b>9</b> Die beste Studentin, ein idealer Lehrer?</a></li>
 <li class="divider"></li>
 <!-- <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li> -->
 
@@ -115,7 +116,7 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
             <section class="normal" id="section-">
 <div id="meinung-äußern-studentin" class="section level1 hasAnchor" number="8">
 <h1><span class="header-section-number">8</span> Die beste Studentin, ein idealer Lehrer?<a href="meinung-äußern-studentin.html#meinung-äußern-studentin" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p><strong>Niveau</strong> A2 <strong>Sprachhandlung</strong> Meinung äußern <strong>Thema</strong> Ideale Lehrer und Studenten <strong>Grammatik</strong> <em>zu</em>-Infinitiv, <em>weil</em>-Nebensätze</p>
+<p><strong>Niveau</strong> A2 <strong>Sprachhandlung</strong> Meinung äußern <strong>Thema</strong> Ideale Lehrer und Studenten <strong>Grammatik</strong> <em>zu</em>-Infinitiv, <em>weil</em>-Nebensätze, Modalverben</p>
 <time>00:00 – 00:10</time>
 <task>
 1
@@ -154,7 +155,8 @@ Ich persönlich denke, unsere Lehrer sind ___ .</p>
 <p>Meiner Meinung nach ist ___ ein / kein guter Lehrer, weil …<br />
 Ich finde, ___ sieht komisch / altmodisch / modern / streng / langweilig / lustig aus.<br />
 Ich denke, ___ behandelt seine Schüler locker / freundlich / fair / respektvoll / streng / schlecht.<br />
-Ich vermute, ___ ist ___ .</p>
+Ich vermute, ___ ist ___ .<br />
+Ich glaube, ___ kann gut ___ .</p>
 </blockquote>
 <time>00:30 – 00:50</time>
 <task>
@@ -165,7 +167,8 @@ Ich vermute, ___ ist ___ .</p>
 <li>hervorragend erklären – in der Lage sein</li>
 </ol>
 <blockquote>
-<p>Ich meine, ein idealer Lehrer ist in der Lage, hervorragend <strong>zu</strong> erklären.</p>
+<p>Ich meine, ein guter Lehrer ist in der Lage, hervorragend <strong>zu</strong> erklären.<br />
+Meiner Meinung nach muss / darf / soll ein guter Lehrer …</p>
 </blockquote>
 <ol start="2" style="list-style-type: decimal">
 <li>versuchen – zu den Schülern – ein gutes Verhältnis schaffen</li>
@@ -176,7 +179,7 @@ Ich vermute, ___ ist ___ .</p>
 <li>nicht versuchen – die Schüler – unter Druck setzen</li>
 <li>sich Mühe geben – guten Unterricht machen</li>
 <li>versuchen – die Schüler – fair behandeln</li>
-<li>ermutern – die Schüler – Kritik üben</li>
+<li>ermuntern – die Schüler – Kritik üben</li>
 </ol>
 <p><time>00:45 – 00:50</time>
 <strong>Pause</strong></p>
@@ -209,8 +212,8 @@ Ich vermute, ___ ist ___ .</p>
           </div>
         </div>
       </div>
-<a href="begründen-single.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="begründen-single.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="meinung-äußern-klimawandel.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
