--- a/sprachspielereien/einheiten/erzählen-schulzeit.html
+++ b/sprachspielereien/einheiten/erzählen-schulzeit.html
@@ -93,6 +93,7 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <li class="chapter" data-level="6" data-path="begründen-lieblingsstadt.html"><a href="begründen-lieblingsstadt.html"><i class="fa fa-check"></i><b>6</b> Begründen: Meine Lieblingsstadt</a></li>
 <li class="chapter" data-level="7" data-path="begründen-single.html"><a href="begründen-single.html"><i class="fa fa-check"></i><b>7</b> Single oder in einer Beziehung: Wieso?</a></li>
 <li class="chapter" data-level="8" data-path="meinung-äußern-studentin.html"><a href="meinung-äußern-studentin.html"><i class="fa fa-check"></i><b>8</b> Die beste Studentin, ein idealer Lehrer?</a></li>
+<li class="chapter" data-level="9" data-path="meinung-äußern-klimawandel.html"><a href="meinung-äußern-klimawandel.html"><i class="fa fa-check"></i><b>9</b> Die beste Studentin, ein idealer Lehrer?</a></li>
 <li class="divider"></li>
 <!-- <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li> -->
 
