update einheit sprachspielereien klimawandel

--- a/sprachspielereien/einheiten/meinung-äußern-klimawandel.html
+++ b/sprachspielereien/einheiten/meinung-äußern-klimawandel.html
@@ -169,12 +169,12 @@ Pause
 </task>
 <p>Diskutieren Sie in der Gruppe: Was können Sie tun, um Ihren ökologischen Fußabdruck zu verkleinern? Diskutieren Sie auch, was China als Land tun könnte. Teilen Sie die Ergebnisse Ihrer Diskussion im Plenum mit.</p>
 <blockquote>
-<p>Ausdrücken von Meinungen: “Ich denke, dass…”<br />
-Zustimmung: “Ja, das stimmt.”<br />
-Ablehnung: “Ich bin anderer Meinung, weil…”<br />
-Begründen von Meinungen: “Ich finde, dass…, weil…”<br />
-Zukunftspläne und Absichten ausdrücken: “In Zukunft werde ich…”, “Ich muss …”
-Nachfragen und Rückfragen: “Was denkst du darüber?” “Was hälst du davon?”</p>
+<p>Ich persönlich denke, dass…<br />
+Ja, das stimmt.<br />
+Ich bin anderer Meinung, weil…<br />
+Ich finde, dass…, weil…<br />
+In Zukunft werde ich… / muss ich…<br />
+Meiner Meinung nach muss / soll / kann China …</p>
 </blockquote>
 
 </div>
