upload einheit beschreiben laender

--- a/sprachspielereien/einheiten/meinung-äußern-klimawandel.html
+++ b/sprachspielereien/einheiten/meinung-äußern-klimawandel.html
@@ -141,7 +141,7 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <task>
 2
 </task>
-<p>Welche Auswirkungen hat der Klimawandel in China? Beraten Sie in der Gruppe und sammeln Sie Beobachtungen im Plenum.</p>
+<p>Welche Gründe, welche Auswirkungen hat die Umweltverschmutzung in China? Beraten Sie in der Gruppe und sammeln Sie Beobachtungen im Plenum.</p>
 <p><img src="images/klimawandel-wolke.png" /></p>
 <time>00:20 – 00:40</time>
 <task>
