--- a/sprachspielereien/einheiten/begründen-lieblingsstadt.html
+++ b/sprachspielereien/einheiten/begründen-lieblingsstadt.html
@@ -93,7 +93,9 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <li class="chapter" data-level="6" data-path="begründen-lieblingsstadt.html"><a href="begründen-lieblingsstadt.html"><i class="fa fa-check"></i><b>6</b> Begründen: Meine Lieblingsstadt</a></li>
 <li class="chapter" data-level="7" data-path="begründen-single.html"><a href="begründen-single.html"><i class="fa fa-check"></i><b>7</b> Single oder in einer Beziehung: Wieso?</a></li>
 <li class="chapter" data-level="8" data-path="meinung-äußern-studentin.html"><a href="meinung-äußern-studentin.html"><i class="fa fa-check"></i><b>8</b> Die beste Studentin, ein idealer Lehrer?</a></li>
-<li class="chapter" data-level="9" data-path="meinung-äußern-klimawandel.html"><a href="meinung-äußern-klimawandel.html"><i class="fa fa-check"></i><b>9</b> Die beste Studentin, ein idealer Lehrer?</a></li>
+<li class="chapter" data-level="9" data-path="meinung-äußern-klimawandel.html"><a href="meinung-äußern-klimawandel.html"><i class="fa fa-check"></i><b>9</b> Klimawandel: Was tun?</a></li>
+<li class="chapter" data-level="10" data-path="beschreiben-vergleichen-länder.html"><a href="beschreiben-vergleichen-länder.html"><i class="fa fa-check"></i><b>10</b> Beschreiben und vergleichen</a></li>
+<li class="chapter" data-level="11" data-path="beschreiben-heimat.html"><a href="beschreiben-heimat.html"><i class="fa fa-check"></i><b>11</b> Meine Heimat beschreiben</a></li>
 <li class="divider"></li>
 <!-- <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li> -->
 
