--- a/sprachspielereien/einheiten/meinung-äußern-klimawandel.html
+++ b/sprachspielereien/einheiten/meinung-äußern-klimawandel.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="meinung-äußern-studentin.html"/>
-
+<link rel="next" href="beschreiben-vergleichen-länder.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -94,6 +94,8 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <li class="chapter" data-level="7" data-path="begründen-single.html"><a href="begründen-single.html"><i class="fa fa-check"></i><b>7</b> Single oder in einer Beziehung: Wieso?</a></li>
 <li class="chapter" data-level="8" data-path="meinung-äußern-studentin.html"><a href="meinung-äußern-studentin.html"><i class="fa fa-check"></i><b>8</b> Die beste Studentin, ein idealer Lehrer?</a></li>
 <li class="chapter" data-level="9" data-path="meinung-äußern-klimawandel.html"><a href="meinung-äußern-klimawandel.html"><i class="fa fa-check"></i><b>9</b> Klimawandel: Was tun?</a></li>
+<li class="chapter" data-level="10" data-path="beschreiben-vergleichen-länder.html"><a href="beschreiben-vergleichen-länder.html"><i class="fa fa-check"></i><b>10</b> Beschreiben und vergleichen</a></li>
+<li class="chapter" data-level="11" data-path="beschreiben-heimat.html"><a href="beschreiben-heimat.html"><i class="fa fa-check"></i><b>11</b> Meine Heimat beschreiben</a></li>
 <li class="divider"></li>
 <!-- <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li> -->
 
@@ -183,8 +185,8 @@ Meiner Meinung nach muss / soll / kann China …</p>
           </div>
         </div>
       </div>
-<a href="meinung-äußern-studentin.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="meinung-äußern-studentin.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="beschreiben-vergleichen-länder.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
