update einheit heimat beschreiben

--- a/sprachspielereien/einheiten/beschreiben-heimat.html
+++ b/sprachspielereien/einheiten/beschreiben-heimat.html
@@ -147,18 +147,18 @@ Text
 <task>
 3
 </task>
-<p>Hier beschreiben drei Männer und Frauen ihre Heimaterinnerungen.</p>
+<p>Hier beschreiben drei Männer und Frauen ihre Heimaterinnerungen. Lesen Sie die Erinnerungen einmal durch. Welche Erinnerung ist Ihrer eigenen Heimaterinnerung ähnlich? Welche Gemeinsamkeiten entdecken Sie?</p>
 <blockquote>
 <p>Kira, 27<br />
-Ich befinde mich in meiner Heimatstadt. Die Sonne wärmt mein Gesicht, als ich durch die vertraut___ Straßen schlendere. Fröhlich___ Kinder spielen auf der Straße und ich höre das Lachen meiner alt___ Schulfreunde. Der Duft von frisch___ Brot zieht durch die Luft, während ich den Weg zur Schule gehe. Meine Schule liegt neben einer beliebt___ Bäckerei. Das Klassenzimmer ist erfüllt von lebhaft___ Gesprächen und dem leis___ Kratzen von Stiften auf Papier. Nach der Schule treffe ich meine Großeltern auf der Veranda, ihr herzlich___ Lachen erfüllt die Luft. Meine Großmutter hat lecker___ Kuchen mit frisch___ Obst aus ihrem eigen___ klein___ Garten gebacken. Mein Großvater trinkt süß___ Tee. Jeder Schritt weckt eine neue Erinnerung, jedes Bild, jeder Klang, jeder vertraut___ Geruch führt mich tiefer in meine Kindheit zurück.</p>
+Ich befinde mich in meiner Heimatstadt. Die Sonne wärmt mein Gesicht, als ich durch die vertrauten Straßen schlendere. Fröhliche Kinder spielen auf der Straße und ich höre das Lachen meiner alten Schulfreunde. Der Duft von frischem Brot zieht durch die Luft, während ich den Weg zur Schule gehe. Meine Schule liegt neben einer beliebten Bäckerei. Das Klassenzimmer ist erfüllt von lebhaften Gesprächen und dem leisen Kratzen von Stiften auf Papier. Nach der Schule treffe ich meine Großeltern auf der Veranda, ihr herzliches Lachen erfüllt die Luft. Meine Großmutter hat leckeren Kuchen mit frischem Obst aus ihrem eigenen kleinen Garten gebacken. Mein Großvater trinkt süßen Tee. Jeder Schritt weckt eine neue Erinnerung, jedes Bild, jeder Klang, jeder vertrauten Geruch führt mich tiefer in meine Kindheit zurück.</p>
 </blockquote>
 <blockquote>
 <p>Werner, 58<br />
-Ich schließe die Augen und finde mich in meiner Heimatstadt wieder. Die grün___ Hügel umgeben die Stadt, und der Duft von frisch gemäht___ Gras steigt mir in die Nase. Ich höre das Lachen meiner Freunde. Wir spielen Fangen im englisch___ Garten mit dem klein___ Schlösschen. Das Gras kitzelt unter meinen Füßen. Die Schulglocke läutet, und der vertraut___ Klang führt mich zurück ins Klassenzimmer. Die Lehrer sprechen mit ruhig___ Stimme, und die Kreide quietscht auf der Tafel. Nach der Schule besuche ich den Markt, wo die bunt___ Stände mit frisch___ Obst und Gemüse gefüllt sind. Der Duft von Gewürzen und gebraten___ Köstlichkeiten erfüllt die Luft. Mit jedem Atemzug tauche ich tiefer in meine Kindheit ein.</p>
+Ich schließe die Augen und finde mich in meiner Heimatstadt wieder. Die grünen Hügel umgeben die Stadt, und der Duft von frisch gemähtem Gras steigt mir in die Nase. Ich höre das Lachen meiner Freunde. Wir spielen Fangen im englischen Garten mit dem kleinen Schlösschen. Das Gras kitzelt unter meinen Füßen. Die Schulglocke läutet, und der vertraute Klang führt mich zurück ins Klassenzimmer. Die Lehrer sprechen mit ruhiger Stimme, und die Kreide quietscht auf der Tafel. Nach der Schule besuche ich den Markt, wo die bunten Stände mit frischem Obst und Gemüse gefüllt sind. Der Duft von Gewürzen und gebratenen Köstlichkeiten erfüllt die Luft. Mit jedem Atemzug tauche ich tiefer in meine Kindheit ein.</p>
 </blockquote>
 <blockquote>
 <p>Isabell, 19<br />
-Ich lasse meine Gedanken in meine Heimatstadt schweifen. Die erst___ Sonnenstrahlen wärmen meine Haut, während ich durch die eng___ Gassen gehe. Das fröhlich___ Lachen der spielenden Kinder und das Zwitschern der Vögel begleiten mich. Ich passiere meine alt___ Schule, die Glocke läutet zum Unterrichtsbeginn. Nach der Schule gehe ich zum nahegelegen___ Flussufer, wo ich als Kind klein___ Steine ins Wasser geworfen habe. Ich höre das leis___ Plätschern des Wassers und das laut___ Lachen meiner Freunde. Abends versammelt sich meine Familie zum gemeinsam___ Abendessen, der Duft von hausgemacht___ Essen steigt auf. Mit jedem Schritt in dieser Meditation werden lebendig___ Erinnerungen an Orte, Menschen und Momente in meiner Kindheit wiederbelebt.</p>
+Ich lasse meine Gedanken in meine Heimatstadt schweifen. Die ersten Sonnenstrahlen wärmen meine Haut, während ich durch die engen Gassen gehe. Das fröhlichen Lachen der spielenden Kinder und das Zwitschern der Vögel begleiten mich. Ich passiere meine alte Schule, die Glocke läutet zum Unterrichtsbeginn. Nach der Schule gehe ich zum nahegelegenen Flussufer, wo ich als Kind kleine Steine ins Wasser geworfen habe. Ich höre das leise Plätschern des Wassers und das laute Lachen meiner Freunde. Abends versammelt sich meine Familie zum gemeinsamen Abendessen, der Duft von hausgemachtem Essen steigt auf. Mit jedem Schritt in dieser Meditation werden lebendige Erinnerungen an Orte, Menschen und Momente in meiner Kindheit wiederbelebt.</p>
 </blockquote>
 <p>Lesen Sie noch einmal und beantworten Sie folgende Fragen.</p>
 <p>Kira, 27</p>
@@ -171,13 +171,13 @@ Ich lasse meine Gedanken in meine Heimatstadt schweifen. Die erst___ Sonnenstrah
 <ul>
 <li>Wie ist Werners Heimatstadt gelegen?</li>
 <li>Was machen Werner und seine Freunde im englischen Garten?</li>
-<li>Was macht sie nach der Schule?</li>
+<li>Was macht er nach der Schule?</li>
 </ul>
 <p>Isabell, 19</p>
 <ul>
 <li>Was begleitet sie, während sie durch die Gassen geht?</li>
-<li>Was hat Isabell als Kind am Flussufer gemacht?</li>
-<li>Was hört sie abends während des gemeinsamen Abendessens?</li>
+<li>Was hat Isabell nach der Schule gemacht?</li>
+<li>Was hört sie am Flussufer?</li>
 </ul>
 <p><time>00:45 – 00:50</time>
 <strong>Pause</strong></p>
