upload neue einheit sternzeichen

--- a/sprachspielereien/einheiten/beschreiben-heimat.html
+++ b/sprachspielereien/einheiten/beschreiben-heimat.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="beschreiben-vergleichen-länder.html"/>
-
+<link rel="next" href="charakter-beschreiben-adjektive.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -96,6 +96,7 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <li class="chapter" data-level="9" data-path="meinung-äußern-klimawandel.html"><a href="meinung-äußern-klimawandel.html"><i class="fa fa-check"></i><b>9</b> Klimawandel: Was tun?</a></li>
 <li class="chapter" data-level="10" data-path="beschreiben-vergleichen-länder.html"><a href="beschreiben-vergleichen-länder.html"><i class="fa fa-check"></i><b>10</b> Beschreiben und vergleichen</a></li>
 <li class="chapter" data-level="11" data-path="beschreiben-heimat.html"><a href="beschreiben-heimat.html"><i class="fa fa-check"></i><b>11</b> Meine Heimat beschreiben</a></li>
+<li class="chapter" data-level="12" data-path="charakter-beschreiben-adjektive.html"><a href="charakter-beschreiben-adjektive.html"><i class="fa fa-check"></i><b>12</b> Sternzeichen beschreiben</a></li>
 <li class="divider"></li>
 <!-- <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li> -->
 
@@ -128,7 +129,7 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <summary>
 Text
 </summary>
-<p>Nach einem langen und anstrengenden Semester an der Universität reisen Sie in Ihre Heimat. Die Sonne scheint, die Luft ist frisch und der Wind weht Ihnen ins Gesicht.</p>
+<p>Nach einem langen und anstrengenden Semester an der Universität reisen Sie in Ihre Heimat. Die Sonne scheint, die Luft ist frisch und der Wind weht Ihnen ins Gesicht. Spüren Sie die warme Sonne auf Ihrem Körper, atmen Sie die frische Luft und fühlen Sie den frischen Wind im Gesicht.</p>
 <p>Sie erreichen Ihre Heimat. Alles hier ist Ihnen vertraut: Die Landschaft, die alten Straßen und bekannten Häuser, die Menschen, ihre Kleidung, ihre Sprache.</p>
 <p>Sie laufen die Straße entlang, wo Sie Ihre Kindheit verbracht haben, wo Sie aufgewachsen sind. Es ist ein gutes Gefühl, wieder hier zu sein. Schauen Sie sich um. Was sehen Sie auf der Straße? Wen treffen Sie dort?</p>
 <p>Sie laufen weiter und erreichen Ihre alte Schule. In der Schule ist gerade Unterricht. Sie schauen durch die Fenster und sehen sich selbst im Klassenzimmer sitzen. Was machen Sie gerade? Wer sitzt neben Ihnen?</p>
@@ -150,7 +151,7 @@ Text
 <p>Hier beschreiben drei Männer und Frauen ihre Heimaterinnerungen. Lesen Sie die Erinnerungen einmal durch. Welche Erinnerung ist Ihrer eigenen Heimaterinnerung ähnlich? Welche Gemeinsamkeiten entdecken Sie?</p>
 <blockquote>
 <p>Kira, 27<br />
-Ich befinde mich in meiner Heimatstadt. Die Sonne wärmt mein Gesicht, als ich durch die vertrauten Straßen schlendere. Fröhliche Kinder spielen auf der Straße und ich höre das Lachen meiner alten Schulfreunde. Der Duft von frischem Brot zieht durch die Luft, während ich den Weg zur Schule gehe. Meine Schule liegt neben einer beliebten Bäckerei. Das Klassenzimmer ist erfüllt von lebhaften Gesprächen und dem leisen Kratzen von Stiften auf Papier. Nach der Schule treffe ich meine Großeltern auf der Veranda, ihr herzliches Lachen erfüllt die Luft. Meine Großmutter hat leckeren Kuchen mit frischem Obst aus ihrem eigenen kleinen Garten gebacken. Mein Großvater trinkt süßen Tee. Jeder Schritt weckt eine neue Erinnerung, jedes Bild, jeder Klang, jeder vertrauten Geruch führt mich tiefer in meine Kindheit zurück.</p>
+Ich befinde mich in meiner Heimatstadt. Die Sonne wärmt mein Gesicht, als ich durch die vertrauten Straßen schlendere. Fröhliche Kinder spielen auf der Straße und ich höre das Lachen meiner alten Schulfreunde. Der Duft von frischem Brot zieht durch die Luft, während ich den Weg zur Schule gehe. Meine Schule liegt neben einer beliebten Bäckerei. Das Klassenzimmer ist erfüllt von lebhaften Gesprächen und dem leisen Kratzen von Stiften auf Papier. Nach der Schule treffe ich meine Großeltern auf der Veranda, ihr herzliches Lachen erfüllt die Luft. Meine Großmutter hat leckeren Kuchen mit frischem Obst aus ihrem eigenen kleinen Garten gebacken. Mein Großvater trinkt süßen Tee. Jeder Schritt weckt eine neue Erinnerung, jedes Bild, jeder Klang, jeder vertraute Geruch führt mich tiefer in meine Kindheit zurück.</p>
 </blockquote>
 <blockquote>
 <p>Werner, 58<br />
@@ -158,7 +159,7 @@ Ich schließe die Augen und finde mich in meiner Heimatstadt wieder. Die grünen
 </blockquote>
 <blockquote>
 <p>Isabell, 19<br />
-Ich lasse meine Gedanken in meine Heimatstadt schweifen. Die ersten Sonnenstrahlen wärmen meine Haut, während ich durch die engen Gassen gehe. Das fröhlichen Lachen der spielenden Kinder und das Zwitschern der Vögel begleiten mich. Ich passiere meine alte Schule, die Glocke läutet zum Unterrichtsbeginn. Nach der Schule gehe ich zum nahegelegenen Flussufer, wo ich als Kind kleine Steine ins Wasser geworfen habe. Ich höre das leise Plätschern des Wassers und das laute Lachen meiner Freunde. Abends versammelt sich meine Familie zum gemeinsamen Abendessen, der Duft von hausgemachtem Essen steigt auf. Mit jedem Schritt in dieser Meditation werden lebendige Erinnerungen an Orte, Menschen und Momente in meiner Kindheit wiederbelebt.</p>
+Ich lasse meine Gedanken in meine Heimatstadt schweifen. Die ersten Sonnenstrahlen wärmen meine Haut, während ich durch die engen Gassen gehe. Das fröhliche Lachen der spielenden Kinder und das Zwitschern der Vögel begleiten mich. Ich passiere meine alte Schule, die Glocke läutet zum Unterrichtsbeginn. Nach der Schule gehe ich zum nahegelegenen Flussufer, wo ich als Kind kleine Steine ins Wasser geworfen habe. Ich höre das leise Plätschern des Wassers und das laute Lachen meiner Freunde. Abends versammelt sich meine Familie zum gemeinsamen Abendessen, der Duft von hausgemachtem Essen steigt auf. Mit jedem Schritt in dieser Meditation werden lebendige Erinnerungen an Orte, Menschen und Momente in meiner Kindheit wiederbelebt.</p>
 </blockquote>
 <p>Lesen Sie noch einmal und beantworten Sie folgende Fragen.</p>
 <p>Kira, 27</p>
@@ -211,8 +212,8 @@ Ich lasse meine Gedanken in meine Heimatstadt schweifen. Die ersten Sonnenstrahl
           </div>
         </div>
       </div>
-<a href="beschreiben-vergleichen-länder.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="beschreiben-vergleichen-länder.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="charakter-beschreiben-adjektive.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
