--- a/sprachspielereien/einheiten/beschreiben-vergleichen-länder.html
+++ b/sprachspielereien/einheiten/beschreiben-vergleichen-länder.html
@@ -96,6 +96,7 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <li class="chapter" data-level="9" data-path="meinung-äußern-klimawandel.html"><a href="meinung-äußern-klimawandel.html"><i class="fa fa-check"></i><b>9</b> Klimawandel: Was tun?</a></li>
 <li class="chapter" data-level="10" data-path="beschreiben-vergleichen-länder.html"><a href="beschreiben-vergleichen-länder.html"><i class="fa fa-check"></i><b>10</b> Beschreiben und vergleichen</a></li>
 <li class="chapter" data-level="11" data-path="beschreiben-heimat.html"><a href="beschreiben-heimat.html"><i class="fa fa-check"></i><b>11</b> Meine Heimat beschreiben</a></li>
+<li class="chapter" data-level="12" data-path="charakter-beschreiben-adjektive.html"><a href="charakter-beschreiben-adjektive.html"><i class="fa fa-check"></i><b>12</b> Sternzeichen beschreiben</a></li>
 <li class="divider"></li>
 <!-- <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li> -->
 
