--- a/sprachspielereien/einheiten/charakter-beschreiben-adjektive.html
+++ b/sprachspielereien/einheiten/charakter-beschreiben-adjektive.html
@@ -183,7 +183,7 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <td>verlässlich sein</td>
 <td>5</td>
 <td>E</td>
-<td>Man unternimmt gerne etwas.</td>
+<td>Man ist gern unter Leuten.</td>
 </tr>
 </tbody>
 </table>
@@ -261,7 +261,7 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <td>perfektionistisch sein</td>
 <td>12</td>
 <td>L</td>
-<td>Man bevorzugt niemanden und man möchte alle gleich behandeln.</td>
+<td>Man hält sich selbst für besser als andere.</td>
 </tr>
 <tr class="odd">
 <td>pessimistisch sein</td>
@@ -276,10 +276,16 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <td>Man legt sehr viel Wert auf sein Aussehen.</td>
 </tr>
 <tr class="odd">
-<td>eitel sein</td>
+<td>arrogant</td>
 <td>15</td>
 <td>O</td>
-<td>Man erfüllt seine Pflichten.</td>
+<td>Man bevorzugt niemanden und man möchte alle gleich behandeln.</td>
+</tr>
+<tr class="even">
+<td>eitel sein</td>
+<td>16</td>
+<td>P</td>
+<td>Man möchte alles perfekt machen.</td>
 </tr>
 </tbody>
 </table>
@@ -301,32 +307,38 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <tbody>
 <tr class="odd">
 <td>ehrlich sein</td>
-<td>16</td>
-<td>P</td>
+<td>17</td>
+<td>Q</td>
 <td>Man erfüllt seine Pflichten.</td>
 </tr>
 <tr class="even">
 <td>nachtragend sein</td>
-<td>17</td>
-<td>Q</td>
+<td>18</td>
+<td>R</td>
 <td>Man ist sehr lange auf jemanden böse.</td>
 </tr>
 <tr class="odd">
 <td>selbstbewusst sein</td>
-<td>18</td>
-<td>R</td>
-<td>Man ist gern unter Leuten.</td>
+<td>19</td>
+<td>S</td>
+<td>Man unternimmt gerne etwas.</td>
 </tr>
 <tr class="even">
 <td>pflichtbewusst sein</td>
-<td>19</td>
-<td>S</td>
+<td>20</td>
+<td>T</td>
 <td>Man ist sich des eigenen Wertes und Könnens bewusst.</td>
 </tr>
 <tr class="odd">
 <td>unternehmungslustig sein</td>
-<td>20</td>
-<td>T</td>
+<td>21</td>
+<td>U</td>
+<td>Man ist einfallreich, hat viele Ideen und stellt sich gern Dinge vor.</td>
+</tr>
+<tr class="even">
+<td>phantasievoll</td>
+<td>22</td>
+<td>V</td>
 <td>Man lügt nicht.</td>
 </tr>
 </tbody>
