--- a/sprachspielereien/einheiten/informationen-erfragen-urlaub.html
+++ b/sprachspielereien/einheiten/informationen-erfragen-urlaub.html
@@ -132,13 +132,13 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <p><img src='images/image_iquitos_03.jpg' style='height:200px; width: auto;'/></p>
 <p><img src='images/image_iquitos_04.jpg' style='height:200px; width: auto;'/></p>
 </div>
-<p>Haben Sie schon einmal an einem ungewöhnlichen Ort Urlaub gemacht? Was haben Sie dort getan oder erlebt? Notieren Sie an der Tafel.</p>
+<p>Haben Sie schon einmal an einem ungewöhnlichen Ort Urlaub gemacht? Welche außergewöhnlichen Orte möchten Sie gern einmal besuchen? Notieren Sie an der Tafel.</p>
 <time>00:15 – 00:35</time>
 <task>
 2
 </task>
 <p>Hören Sie folgenden <a href="audios/audio_urlaub_mond.mp3">Radiobeitrag</a>. Wohin geht die Reise?</p>
-<p>Hören Sie dann noch einmal und beantworten Sie die weiteren Fragen.</p>
+<p>Hören Sie dann noch einmal und beantworten Sie die weiteren Fragen. Welche anderen Fragen sind vor der Reise wichtig?</p>
 <details>
 <summary>
 Weitere Fragen
